### OPEN SOURCE LICENSE - GNU PUBLIC LICENSE Version 3.0 #######
#
#    Net::FullAuto - Powerful Network Process Automation Software
#    Copyright (C) 2011, 2012, 2013  Brian M. Kelly 
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but **WITHOUT ANY WARRANTY**; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-01-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999972 released.

        * Fix for permissions in Makefile.PL.

        * Fix for output processing in FA_Core.pm.

	* Added cache output for acquire_fa_lock() in
          FA_Core.pm.


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999971 released.

        * Updated fa -V to show custom files in user dir.


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999970 released.

        * Updated fa -V to show custom files in user dir.


2013-01-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999969 released.

        * Fix for permissions in Makefile.PL.


2013-01-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999968 released.

        * Fix for permissions in Makefile.PL.


2013-01-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999967 released.

        * Fix for permissions in Makefile.PL.

