@@ -14,16 +14,16 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b8005509614eab379c0f9dd84263fdc6d246e065 ChangeLog
+SHA1 da2d142c6a144043d9aaa63b74505872fc974a27 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 c8b12a072baed306a859c63b29962cd585f19f7c META.yml
-SHA1 9a398f0ab44b8daaaf7804ebc6c5eea5d888c870 MYMETA.json
-SHA1 7ae6d6f2419a72b5c3d993653753b9774e4c64e6 MYMETA.yml
-SHA1 ae7b24b0b60192936bdc81cb407937954ba656ca Makefile.PL
-SHA1 cbcb130fc9fe3f4d4dd8263e7b4ee4b39b182bd1 README
+SHA1 7831f6037ef3fc8aedbb443f3fe9847be15543dc META.yml
+SHA1 6da5ae4f12828d5f7a989af38f8686c76b42f476 MYMETA.json
+SHA1 fa4739af057c02c562d9e8bb6c98f1f99c853c2e MYMETA.yml
+SHA1 4d642f621a7b985d0826a0566f50fddfa4cf326c Makefile.PL
+SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
-SHA1 39cf02b95d140e1dd95b4c7486b225f29eacb90a bin/fullauto.pl
+SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
 SHA1 9ed0ad5565434ce0195e1b6520423d796990032b bin/install_mozrepl_plugin.exe
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
@@ -38,25 +38,25 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 0e48befcde75dd2161bf5241566e588b50cfe99f install_mozrepl_plugin.ahk
-SHA1 45b23896293dba6b4a8eec5aac7bc38d473120b7 lib/Net/FullAuto.pm
-SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
-SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
-SHA1 b2282d66e77abab818cb5c894e164f82db09b720 lib/Net/FullAuto/Distro/fa_code.pm
-SHA1 4dad896f471845808c55e7b5eee2d71d70246f46 lib/Net/FullAuto/Distro/fa_code_demo.pm
-SHA1 fea27881009cb4d2992ef5a6c5a38f4bd46fa1e6 lib/Net/FullAuto/Distro/fa_conf.pm
-SHA1 8232e5ea9e46c18d7ceb8fa97f8af22997d08a32 lib/Net/FullAuto/Distro/fa_host.pm
-SHA1 a2540f875220a8c9cb8ce121acdba2940574ad64 lib/Net/FullAuto/Distro/fa_maps.pm
-SHA1 de20aed635547529bd308e02954df2247198b781 lib/Net/FullAuto/Distro/fa_menu.pm
-SHA1 5806b579c936d0e8a6eb8844192156722fbfc4d0 lib/Net/FullAuto/Distro/fa_menu_demo.pm
+SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
+SHA1 d3d0333286874c0224a1550dbb337392bacf1d4a lib/Net/FullAuto.pm
+SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
+SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
+SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
+SHA1 4508561dd4ddc215c4794607def0ea731f29eb93 lib/Net/FullAuto/Distro/fa_code_demo.pm
+SHA1 b1816679f982b6191a49f076fbdc17f7038fab67 lib/Net/FullAuto/Distro/fa_conf.pm
+SHA1 d83833c42c292dce8d254ae9f236d3dda9b0d1eb lib/Net/FullAuto/Distro/fa_host.pm
+SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
+SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
+SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 3c6e2ea1d4887d58216014798a0da2cc43403946 lib/Net/FullAuto/FA_Core.pm
+SHA1 0b6b0cb53f18b1d2b8e2dcd46922360b13f3cc57 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDwc70ACgkQJM3IZYB6aOq8XwCeJ52lWeYgoHE+QG8rLF8TDcxJ
-VOwAnRHSLCtNI7Ydm4kmNk/+oCcRPOjp
-=e9Y4
+iEYEARECAAYFAlDxY08ACgkQJM3IZYB6aOpBnwCeOOadM55Ywyx7MMjCcwWrQOes
+uScAn3NuTHPf4VOoYwj5hOm4vDCweQVK
+=LdeR
 -----END PGP SIGNATURE-----
