@@ -1,7 +1,7 @@
 ;### OPEN SOURCE LICENSE - GNU PUBLIC LICENSE Version 3.0 #######
 ;#
 ;#    Net::FullAuto - Powerful Network Process Automation Software
-;#    Copyright (C) 2012, 2013  Brian M. Kelly
+;#    Copyright (C) 2000-2013  Brian M. Kelly
 ;#
 ;#    This program is free software: you can redistribute it and/or modify
 ;#    it under the terms of the GNU General Public License as published by
